--- a/sass/abstracts/_media.scss
+++ b/sass/abstracts/_media.scss
@@ -143,13 +143,32 @@
         margin: 0;
     }
 
+    .content .content-box .row {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 0px auto 0 auto 0;
+        height: 65rem;
+    }
+
     .content {
+
+
         .content-box {
+            height: 100%;
+
+            .card {
+                margin-top: 50rem;
+            }
+
             .row {
+                display: flex;
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
                 margin: 0;
+
 
 
             }
@@ -163,26 +182,7 @@
         }
     }
 
-    .card-1 {
-        max-width: fit-content;
-        position: absolute;
-        top: 50%;
-        left: 35%;
-    }
 
-    .card-2 {
-        max-width: fit-content;
-        position: absolute;
-        top: 300%;
-        left: 35%;
-    }
-
-    .card-3 {
-        max-width: fit-content;
-        position: absolute;
-        bottom: -550%;
-        left: 35%;
-    }
 
     .card {
 
@@ -196,12 +196,17 @@
         }
     }
 
+    .contact {
+        height: 25vh;
+    }
 
     .contact-box {
         width: 100%;
+        height: 1rem;
     }
 
     .footer {
+        height: 1 rem;
         width: 100vw;
 
         .footer-box {
