--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -39,6 +39,7 @@
 }
 
 .content {
+    margin-top: 5rem;
     position: relative;
     @include grayBackground;
     min-height: 100vh;
@@ -50,6 +51,13 @@
 
 
     &-box {
+
         position: relative;
+        height: 100%;
+
+        .card {
+            height: 100%;
+            margin-top: 10rem;
+        }
     }
 }
